# web-tech2

./: .gitignore  pyproject.toml
homework1/: anagram.py  division.py  happiness.py  lists.py  matrix_mult.py  max_word.py  metro.py  minion_game.py  nested_list.py  pirate_ship.py  price_sum.py  python_if_else.py  second_score.py  swap_case.py  test.py
homework2/: average_scores.py  circle_square_mk.py  complex_numbers.py  email_validation.py  fact.py  fibonacci.py  file_search.py  files_sort.py  log_decorator.py  my_sum.py  my_sum_argv.py  people_sort.py  phone_number.py  plane_angle.py  process_list.py  show_employee.py  sum_and_sub.py  test.py
lab1/app/templates/: post.html
lab2/: app.py
lab2/templates/: base.html  info.html  phone.html  request_cookies.html  request_form.html  request_get.html  request_headers.html
lab3/: app.py
lab3/templates/: base.html  index.html  login.html  secret.html
lab4/: app.py
lab4/templates/: base.html  index.html  visit_logs.html
lab45/: app.py
lab45/templates/: base.html  change_password.html  login.html  report_pages.html  report_users.html  user_form.html  user_view.html  visit_logs.html
lab45/templates/includes/: delete_modal.html
lab6/app/: courses.py  models.py
lab6/app/migrations/versions/: 2476b69bc352_initial_migration.py
lab6/app/templates/courses/: reviews.html  show.html
