[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "zzay",email = "ampleenkov.do@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "markupsafe (>=3.0.3,<4.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "faker (>=40.5.1,<41.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "werkzeug (>=3.1.6,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
